--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -13,8 +13,7 @@ env:
   DOCKER_REPO: europe-west3-docker.pkg.dev/schulung-b14-c146/playground-docker
 
 jobs:
-  build-image:
-
+  steps:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1.1.0
 
