second fix Github Action file

--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -13,21 +13,30 @@ env:
   DOCKER_REPO: europe-west3-docker.pkg.dev/schulung-b14-c146/playground-docker
 
 jobs:
-  steps:
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1.1.0
+  build-image:
+    runs-on: self-hosted-dev
+    permissions:
+      contents: 'read'
+      actions: 'write'
+      id-token: 'write'
+    defaults:
+      run:
+        working-directory: playground
+    steps:
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v1.1.0
 
-    - name: Configure Docker
-      run: |
-        gcloud auth configure-docker --quiet
-        gcloud auth configure-docker ${PROJECT_LOCATION}-docker.pkg.dev --quiet
+      - name: Configure Docker
+        run: |
+          gcloud auth configure-docker --quiet
+          gcloud auth configure-docker ${PROJECT_LOCATION}-docker.pkg.dev --quiet
 
-    - name: Build Docker Images PLAYGROUND
-      working-directory: playground
-      run: |
-        docker build -t playground .
+      - name: Build Docker Images PLAYGROUND
+        working-directory: playground
+        run: |
+          docker build -t playground .
 
-    - name: Tag and Push Docker Images PLAYGROUND
-      run: |
-        docker tag playground ${DOCKER_REPO}/playground:${GITHUB_SHA}
-        docker push ${DOCKER_REPO}/playground:${GITHUB_SHA}
+      - name: Tag and Push Docker Images PLAYGROUND
+        run: |
+          docker tag playground ${DOCKER_REPO}/playground:${GITHUB_SHA}
+          docker push ${DOCKER_REPO}/playground:${GITHUB_SHA}
