--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -15,6 +15,7 @@ env:
 jobs:
   build-image:
     runs-on: ubuntu-20.04
+    environment: DEV
     permissions:
       contents: 'read'
       actions: 'write'
