--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -24,6 +24,7 @@ jobs:
       run:
         working-directory: playground
     steps:
+      - uses: actions/checkout@v3
       - name: Authentication
         id: auth
         uses: google-github-actions/auth@v1.0.0
