--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -22,7 +22,7 @@ jobs:
       id-token: 'write'
     defaults:
       run:
-        working-directory: playground
+        working-directory: .
     steps:
       - uses: actions/checkout@v3
       - name: Authentication
