--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -38,8 +38,7 @@ jobs:
 
       - name: Configure Docker
         run: |
-          gcloud auth configure-docker --quiet
-          gcloud auth configure-docker ${PROJECT_LOCATION}-docker.pkg.dev --quiet
+          gcloud auth configure-docker
 
       - name: Build Docker Images PLAYGROUND
         working-directory: .
