--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -38,10 +38,10 @@ jobs:
 
       - name: Configure Docker
         run: |
-          gcloud auth configure-docker
+          gcloud auth configure-docker --quiet
+          gcloud auth configure-docker ${PROJECT_LOCATION}-docker.pkg.dev --quiet
 
       - name: Build Docker Images PLAYGROUND
-        working-directory: .
         run: |
           docker build -t playground .
 
