--- a/.github/workflows/dockerToArtefactRegistry.yml
+++ b/.github/workflows/dockerToArtefactRegistry.yml
@@ -42,5 +42,5 @@ jobs:
 
       - name: Tag and Push Docker Images PLAYGROUND
         run: |
-          docker tag playground ${DOCKER_REPO}/playground:${GITHUB_SHA} \
-          docker push ${DOCKER_REPO}/playground:${GITHUB_SHA} \
+          docker tag playground ${DOCKER_REPO}/playground:${GITHUB_SHA} 
+          docker push ${DOCKER_REPO}/playground:${GITHUB_SHA} 
